--- a/style.css
+++ b/style.css
@@ -2525,6 +2525,15 @@ pre.wp-block-verse {
 	color: var(--global--color-foreground);
 	font-family: var(--entry-content--font-family);
 	padding: 0;
+	padding-right: 24px;
+	white-space: pre-wrap;
+	/* Since CSS 2.1 */
+}
+
+@media only screen and (min-width: 482px) {
+	pre.wp-block-verse {
+		padding-right: 130px;
+	}
 }
 
 .wp-block-video figcaption {
